possible fix issue #13

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -99,7 +99,7 @@
     <Compile Include="ArtefactImportTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubSetImportTests.cs" />
-    <Compile Include="TemplateExporterTests.cs" />
+    <Compile Include="SubsetExportTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Geometrie_Artefact.db" />
