--- a/OTLWizard/OTLWizard.csproj
+++ b/OTLWizard/OTLWizard.csproj
@@ -124,6 +124,12 @@
     <Compile Include="ApplicationData\ArtefactExporterXLS.cs" />
     <Compile Include="ApplicationData\SubsetExporter.cs" />
     <Compile Include="ApplicationData\SubsetExporterCSV.cs" />
+    <Compile Include="FrontEnd\SettingsWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrontEnd\SettingsWindow.Designer.cs">
+      <DependentUpon>SettingsWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\DummyDataHandler.cs" />
     <Compile Include="Helpers\Language.cs" />
     <Compile Include="Helpers\ParameterHandler.cs" />
@@ -174,6 +180,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrontEnd\ExportArtefactWindow.resx">
       <DependentUpon>ExportArtefactWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrontEnd\SettingsWindow.resx">
+      <DependentUpon>SettingsWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrontEnd\HomeWindow.resx">
       <DependentUpon>HomeWindow.cs</DependentUpon>
