dev options added

--- a/OTLWizard/packages.config
+++ b/OTLWizard/packages.config
@@ -5,9 +5,14 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net472" />
+  <package id="NShape.Core" version="2.4.1" targetFramework="net472" />
+  <package id="NShape.Shapes.General" version="2.4.1" targetFramework="net472" />
+  <package id="NShape.WinFormsUI" version="2.4.1" targetFramework="net472" />
   <package id="Office" version="12.0.0" targetFramework="net472" />
   <package id="Office.Interop.Excel" version="12.0.0" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.5" targetFramework="net472" />
+  <package id="Syncfusion.Licensing" version="18.3.0.53" targetFramework="net472" />
+  <package id="Syncfusion.Shared.WPF" version="18.3.0.53" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Data.SQLite" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.115.5" targetFramework="net472" />
