--- a/OTLWizard/OTLWizard.csproj
+++ b/OTLWizard/OTLWizard.csproj
@@ -40,6 +40,15 @@
     <Reference Include="CsvHelper, Version=27.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
       <HintPath>..\packages\CsvHelper.27.2.1\lib\net47\CsvHelper.dll</HintPath>
     </Reference>
+    <Reference Include="Dataweb.NShape, Version=2.4.1.0, Culture=neutral, PublicKeyToken=1512080cd664963c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NShape.Core.2.4.1\lib\net40\Dataweb.NShape.dll</HintPath>
+    </Reference>
+    <Reference Include="Dataweb.NShape.GeneralShapes, Version=2.4.1.0, Culture=neutral, PublicKeyToken=1512080cd664963c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NShape.Shapes.General.2.4.1\lib\net40\Dataweb.NShape.GeneralShapes.dll</HintPath>
+    </Reference>
+    <Reference Include="Dataweb.NShape.WinFormsUI, Version=2.4.1.0, Culture=neutral, PublicKeyToken=1512080cd664963c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NShape.WinFormsUI.2.4.1\lib\net40\Dataweb.NShape.WinFormsUI.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -60,6 +69,12 @@
       <HintPath>..\packages\Office.12.0.0\lib\net40\Office.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
+    <Reference Include="Syncfusion.Licensing, Version=18.3460.0.53, Culture=neutral, PublicKeyToken=632609b4d040f6b4, processorArchitecture=MSIL">
+      <HintPath>..\packages\Syncfusion.Licensing.18.3.0.53\lib\net46\Syncfusion.Licensing.dll</HintPath>
+    </Reference>
+    <Reference Include="Syncfusion.Shared.WPF, Version=18.3460.0.53, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
+      <HintPath>..\packages\Syncfusion.Shared.WPF.18.3.0.53\lib\net46\Syncfusion.Shared.WPF.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.4.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
@@ -75,6 +90,7 @@
     <Reference Include="System.Data.SQLite.Linq, Version=1.0.115.5, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Data.SQLite.Linq.1.0.115.5\lib\net46\System.Data.SQLite.Linq.dll</HintPath>
     </Reference>
+    <Reference Include="System.Design" />
     <Reference Include="System.Memory, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Memory.4.5.0\lib\netstandard2.0\System.Memory.dll</HintPath>
     </Reference>
@@ -88,6 +104,8 @@
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.2\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms.DataVisualization" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp">
@@ -122,8 +140,15 @@
     <Compile Include="ApplicationData\ArtefactExporterCSV.cs" />
     <Compile Include="ApplicationData\ArtefactImporter.cs" />
     <Compile Include="ApplicationData\ArtefactExporterXLS.cs" />
+    <Compile Include="ApplicationData\RealDataImporter.cs" />
     <Compile Include="ApplicationData\SubsetExporter.cs" />
     <Compile Include="ApplicationData\SubsetExporterCSV.cs" />
+    <Compile Include="FrontEnd\RelationWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrontEnd\RelationWindow.Designer.cs">
+      <DependentUpon>RelationWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrontEnd\SettingsWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -132,6 +157,7 @@
     </Compile>
     <Compile Include="Helpers\DummyDataHandler.cs" />
     <Compile Include="Helpers\Language.cs" />
+    <Compile Include="Helpers\NShapeHelper.cs" />
     <Compile Include="Helpers\ParameterHandler.cs" />
     <Compile Include="Helpers\QueryHandler.cs" />
     <Compile Include="ApplicationData\SubsetImporter.cs" />
@@ -170,6 +196,7 @@
       <DependentUpon>ExportSubsetWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="OTLObjecten\OTL_ArtefactType.cs" />
+    <Compile Include="OTLObjecten\OTL_Entity.cs" />
     <Compile Include="OTLObjecten\OTL_ObjectType.cs" />
     <Compile Include="OTLObjecten\OTL_Parameter.cs" />
     <Compile Include="OTLObjecten\OTL_RelationshipType.cs" />
@@ -180,6 +207,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrontEnd\ExportArtefactWindow.resx">
       <DependentUpon>ExportArtefactWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrontEnd\RelationWindow.resx">
+      <DependentUpon>RelationWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrontEnd\SettingsWindow.resx">
       <DependentUpon>SettingsWindow.cs</DependentUpon>
@@ -216,6 +246,7 @@
     <Content Include="Data\settings.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Data\shapedata.txt" />
     <Content Include="Data\version.dat">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
