--- a/UnitTests/packages.config
+++ b/UnitTests/packages.config
@@ -5,7 +5,12 @@
   <package id="Microsoft.Bcl.HashCode" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
+  <package id="NShape.Core" version="2.4.1" targetFramework="net472" />
+  <package id="NShape.Shapes.General" version="2.4.1" targetFramework="net472" />
+  <package id="NShape.WinFormsUI" version="2.4.1" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.5" targetFramework="net472" />
+  <package id="Syncfusion.Licensing" version="18.3.0.53" targetFramework="net472" />
+  <package id="Syncfusion.Shared.WPF" version="18.3.0.53" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Memory" version="4.5.0" targetFramework="net472" />
