--- a/OTLWizard/packages.config
+++ b/OTLWizard/packages.config
@@ -8,6 +8,7 @@
   <package id="Microsoft.Msagl" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.Msagl.Drawing" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.Msagl.GraphViewerGDI" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net472" />
   <package id="NShape.Core" version="2.4.1" targetFramework="net472" />
   <package id="NShape.Shapes.General" version="2.4.1" targetFramework="net472" />
   <package id="NShape.WinFormsUI" version="2.4.1" targetFramework="net472" />
